force-app/main/default/objects/FOPS_Timesheet__c/FOPS_Timesheet__c.object-meta.xml
<CustomObject>
    <description>A period of logged work against an assignment. Amounts are frozen on approval.</description>
    <label>Timesheet</label>
    <nameField>
        <displayFormat>TS-{00000}</displayFormat>
        <label>Timesheet Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Timesheets</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>