force-app/main/default/objects/FOPS_Timesheet__c/fields/FOPS_Approved_By__c.field-meta.xml
<CustomField>
    <fullName>FOPS_Approved_By__c</fullName>
    <label>Approved By</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Timesheets Approved</relationshipLabel>
    <relationshipName>FOPS_TimesheetsApproved</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
    <type>Lookup</type>
</CustomField>