force-app/main/default/objects/FOPS_Timesheet__c/fields/FOPS_Approved_Date__c.field-meta.xml
<CustomField>
    <fullName>FOPS_Approved_Date__c</fullName>
    <label>Approved Date</label>
    <type>DateTime</type>
</CustomField>