force-app/main/default/objects/FOPS_Timesheet__c/fields/FOPS_Assignment__c.field-meta.xml
<CustomField>
    <fullName>FOPS_Assignment__c</fullName>
    <label>Assignment</label>
    <referenceTo>FOPS_Assignment__c</referenceTo>
    <relationshipLabel>Timesheets</relationshipLabel>
    <relationshipName>FOPS_Timesheets</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>