force-app/main/default/objects/FOPS_Timesheet__c/fields/FOPS_Billable_Amount__c.field-meta.xml
<CustomField>
    <fullName>FOPS_Billable_Amount__c</fullName>
    <inlineHelpText>Written by TimesheetAmountService on approval.</inlineHelpText>
    <label>Billable Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>