force-app/main/default/objects/FOPS_Timesheet__c/fields/FOPS_Billable_Amount_Base__c.field-meta.xml
<CustomField>
    <fullName>FOPS_Billable_Amount_Base__c</fullName>
    <label>Billable Amount (Base)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>