force-app/main/default/objects/FOPS_Timesheet__c/fields/FOPS_Billable_Hours__c.field-meta.xml
<CustomField>
    <fullName>FOPS_Billable_Hours__c</fullName>
    <label>Billable Hours</label>
    <summarizedField>FOPS_Time_Entry__c.FOPS_Hours__c</summarizedField>
    <summaryFilterItems>
        <field>FOPS_Time_Entry__c.FOPS_Is_Billable__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>FOPS_Time_Entry__c.FOPS_Timesheet__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>