force-app/main/default/objects/FOPS_Timesheet__c/fields/FOPS_Client_Approval_Reference__c.field-meta.xml
<CustomField>
    <fullName>FOPS_Client_Approval_Reference__c</fullName>
    <label>Client Approval Reference</label>
    <length>120</length>
    <type>Text</type>
</CustomField>