force-app/main/default/objects/FOPS_Timesheet__c/fields/FOPS_Cost_Amount__c.field-meta.xml
<CustomField>
    <fullName>FOPS_Cost_Amount__c</fullName>
    <description>CONFIDENTIAL - hidden from FOPS_Consultant.</description>
    <label>Cost Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>