force-app/main/default/objects/FOPS_Timesheet__c/fields/FOPS_Order__c.field-meta.xml
<CustomField>
    <fullName>FOPS_Order__c</fullName>
    <label>Invoice (Order)</label>
    <referenceTo>Order</referenceTo>
    <relationshipLabel>Timesheets</relationshipLabel>
    <relationshipName>FOPS_Timesheets</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
    <type>Lookup</type>
</CustomField>