force-app/main/default/objects/FOPS_Timesheet__c/fields/FOPS_Period_Type__c.field-meta.xml
<CustomField>
    <fullName>FOPS_Period_Type__c</fullName>
    <label>Period Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Weekly</fullName>
                <default>true</default>
                <label>Weekly</label>
            </value>
            <value>
                <fullName>Bi-weekly</fullName>
            </value>
            <value>
                <fullName>Semi-monthly</fullName>
            </value>
            <value>
                <fullName>Monthly</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>