force-app/main/default/objects/FOPS_Timesheet__c/fields/FOPS_Rejection_Reason__c.field-meta.xml
<CustomField>
    <fullName>FOPS_Rejection_Reason__c</fullName>
    <label>Rejection Reason</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>