force-app/main/default/objects/FOPS_Timesheet__c/fields/FOPS_Submitted_Date__c.field-meta.xml
<CustomField>
    <fullName>FOPS_Submitted_Date__c</fullName>
    <label>Submitted Date</label>
    <type>DateTime</type>
</CustomField>