force-app/main/default/objects/FOPS_Timesheet__c/fields/FOPS_Total_Hours__c.field-meta.xml
<CustomField>
    <fullName>FOPS_Total_Hours__c</fullName>
    <label>Total Hours</label>
    <summarizedField>FOPS_Time_Entry__c.FOPS_Hours__c</summarizedField>
    <summaryForeignKey>FOPS_Time_Entry__c.FOPS_Timesheet__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>